feat: implement students & remove bus
